# sdcard-emmc-rs

./: .gitignore  Cargo.toml  Makefile  README.md  aarch64-freestanding.json  build.rs  mmc.system
.cargo/: config.toml
.github/workflows/: build.yml
optional_os_support/sel4-microkit-support/: Cargo.toml  lib.rs
sdhci/: Cargo.toml  lib.rs  sdhci.rs  sdhci_trait.rs
sdmmc_hal/arasan/: Cargo.toml  lib.rs  sdhci_arasan.rs
sdmmc_hal/meson/: Cargo.toml  meson_gx_mmc.rs
sdmmc_protocol/: Cargo.toml  lib.rs  sdmmc.rs  sdmmc_os.rs  sdmmc_traits.rs
sdmmc_protocol/sdmmc/: mmc_struct.rs  sd_ops.rs  sdcard.rs  sdmmc_capability.rs  sdmmc_constant.rs
src/: main.rs  meson_gx_mmc.rs
src/sel4_microkit_os/: mod.rs  odroidc4.rs
