[package]
name = "sdmmc_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
sel4-microkit = { git = "https://github.com/seL4/rust-sel4.git", rev = "a12b43ee359ed8f1fa7433f0534217da3b83e9ef", features = ["alloc"] }
sdmmc_hal = { path = "sdmmc_hal/meson" }
sdmmc_protocol = { path = "sdmmc_protocol", features = ["sel4-microkit"] }
sddf_timer = {git = "https://github.com/au-ts/sddf.git", rev = "660865ab3509a08686a354cea72e1547f05dfe29"}

[build]
build = "build.rs"