[package]
name = "sdmmc_protocol"
version = "0.1.0"
edition = "2021"
authors = ["Cheng Li 李澄 <lichengchaoreng@gmail.com>"]

[lib]
name = "sdmmc_protocol"
path = "lib.rs"

[dependencies]
bitflags = "2.6.0"
sel4-microkit = { git = "https://github.com/seL4/rust-sel4.git", rev = "d3790bfd15512e18659f9491c319867fabf9552d"}